changed CSS grid properties to address issues on Firefox

--- a/course_project/css/main.css
+++ b/course_project/css/main.css
@@ -16,10 +16,12 @@ html, body {
 }
 
 /* media queries control responsive styles */
-@media screen and (min-width: 1269px) {
+@media screen and (min-width: 1351px) {
 	/* CSS grids are used to control positioning */
 	.container {
 		display: grid;
+		height: 100%;
+		width: 100%;
 		grid-template-columns: 25% 1fr;
 		grid-template-rows: auto 1fr 100px;
 		grid-template-areas: 
@@ -32,14 +34,15 @@ html, body {
 		grid-area: header;
 		align-self: center;
 		text-align: center;
-		height: 100vh;
-		width: 25%;
+		min-height: 100vh;
+		height: 100%;
+		width: 100%;
 		max-width: 400px;
 		background: #432E41;
 		color: #F5F5F5;
 		padding-top: 100px;
 		border-right: 4px solid #27D0B9;
-		position: fixed;
+		overflow: auto;
 	}
 
 	h1 {
@@ -97,7 +100,7 @@ html, body {
 	}
 }
 
-@media screen and (max-width: 1268px) {
+@media screen and (max-width: 1350px) {
 	.container {
 		display: grid;
 		grid-template-columns:1fr;
